Added tags attribute and clear button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <input type="text" id="input-el">
     <button id="input-btn">SEARCH</button>
+    <button id="input-btn2">CLEAR</button>
     <ul id="ul-el">
     </ul>
     <script src="index.js"></script>
